--- a/static/index.html
+++ b/static/index.html
@@ -120,12 +120,64 @@
 
 
         <section class="projects" id="projects">
-            <h2 class="section-heading">Projects</h2>
-            <div class="project-content">
+            <div class="heading-container"><h2 class="section-heading">Projects</h2></div>
+            <div class="project-wrapper">
+
+
+                <div class="project project-left">
+                    <div class="project-image">
+                        <img src="img/ProjectMakerAI.png" alt="ProjectMakerAI">
+                    </div>
+                    <div class="project-description">
+                        <h3>Project Maker AI</h3>
+                        <p>Instantly build a project scaffold utilizing AI.</p>
+                        <p><strong>Tech Stack:</strong> Python, HTML, JavaScript, CSS, OpenAI API</p>
+                        <div class="links">
+                            <a href="#" class="link">LIVE APP</a>
+                            <a href="#" class="link">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project project-right">
+                    <div class="project-image">
+                        <img src="img/financeTrackerProject.png" alt="FinanceTracker">
+                    </div>
+                    <div class="project-description">
+                        <h3>Finance Tracker</h3>
+                        <p>Track and analyze your expenses with real-time insights.</p>
+                        <p><strong>Tech Stack:</strong> Python, HTML, CSS, JavaScript, React.js</p>
+                        <div class="links">
+                            <a href="#" class="link">LIVE APP</a>
+                            <a href="#" class="link">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project project-left">
+                    <div class="project-image">
+                        <img src="img/portfolio.png" alt="portfolio">
+                    </div>
+                    <div class="project-description">
+                        <h3>Tech Portfolio</h3>
+                        <p></p>
+                        <p><strong>Tech Stack:</strong> Node.js, HTHML, CSS, JavaScript, Tailwind</p>
+                        <div class="links">
+                            <a href="#" class="link">Live APP</a>
+                            <a href="#" class="link">LEARN MORE</a>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </section>
-        <section class="contact" id="contact"></section>
+
+
+
+        <section class="contact" id="contact">
+            <h2 class="section-heading">Contact</h2>
+            
+        </section>
 
 
         <script src="scripts.js"></script>
