Home section animated background

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,7 @@
     <body>
         <section class="home min-h-screen" id="home">
             <div class="wrapper">
+                <canvas id="bgCanvas"></canvas>
                 <div class="heading">
                     <div class="line-1">
                         Hello, I'm <span class="text-accent font-semibold">Ibrahim</span>.
@@ -129,7 +130,7 @@
                         <img src="img/ProjectMakerAI.png" alt="ProjectMakerAI">
                     </div>
                     <div class="project-description">
-                        <h3>Project Maker AI</h3>
+                        <h3><strong>Project Maker AI</strong></h3>
                         <p>Instantly build a project scaffold utilizing AI.</p>
                         <p><strong>Tech Stack:</strong> Python, HTML, JavaScript, CSS, OpenAI API</p>
                         <div class="links">
@@ -144,7 +145,7 @@
                         <img src="img/financeTrackerProject.png" alt="FinanceTracker">
                     </div>
                     <div class="project-description">
-                        <h3>Finance Tracker</h3>
+                        <h3><strong>Finance Tracker</strong></h3>
                         <p>Track and analyze your expenses with real-time insights.</p>
                         <p><strong>Tech Stack:</strong> Python, HTML, CSS, JavaScript, React.js</p>
                         <div class="links">
@@ -159,9 +160,9 @@
                         <img src="img/portfolio.png" alt="portfolio">
                     </div>
                     <div class="project-description">
-                        <h3>Tech Portfolio</h3>
+                        <h3><strong>Tech Portfolio</strong></h3>
                         <p></p>
-                        <p><strong>Tech Stack:</strong> Node.js, HTHML, CSS, JavaScript, Tailwind</p>
+                        <p><strong>Tech Stack:</strong> Node.js, HTML, CSS, JavaScript, reacts.js, Tailwind</p>
                         <div class="links">
                             <a href="#" class="link">Live APP</a>
                             <a href="#" class="link">LEARN MORE</a>
