update partical background (home section)

--- a/static/index.html
+++ b/static/index.html
@@ -135,7 +135,7 @@
                         <p><strong>Tech Stack:</strong> Python, HTML, JavaScript, CSS, OpenAI API</p>
                         <div class="links">
                             <a href="#" class="link">LIVE APP</a>
-                            <a href="#" class="link">LEARN MORE</a>
+                            <a href="https://github.com/IbzyX/ProjectMakerAI" class="link">LEARN MORE</a>
                         </div>
                     </div>
                 </div>
@@ -150,7 +150,7 @@
                         <p><strong>Tech Stack:</strong> Python, HTML, CSS, JavaScript, React.js</p>
                         <div class="links">
                             <a href="#" class="link">LIVE APP</a>
-                            <a href="#" class="link">LEARN MORE</a>
+                            <a href="https://github.com/IbzyX/FinanceTracker" class="link">LEARN MORE</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
                         <p><strong>Tech Stack:</strong> Node.js, HTML, CSS, JavaScript, reacts.js, Tailwind</p>
                         <div class="links">
                             <a href="#" class="link">Live APP</a>
-                            <a href="#" class="link">LEARN MORE</a>
+                            <a href="https://github.com/IbzyX/Portfolio-App" class="link">LEARN MORE</a>
                         </div>
                     </div>
                 </div>
