footer / GitHub links

--- a/static/index.html
+++ b/static/index.html
@@ -78,6 +78,10 @@
                                 <img src="img/postgresql.png" alt="PostgreSQL">
                                 <div class="skills-name">PostgreSQL</div>
                             </div>
+                            <div class="skills-item">
+                                <img src="img/git.png" alt="Git">
+                                <div class="skills-name">Git</div>
+                            </div>
                         </div>
 
                         <div class="skills-row">
@@ -93,10 +97,7 @@
                                 <img src="img/css.png" alt="CSS">
                                 <div class="skills-name">CSS</div>
                             </div>
-                            <div class="skills-item">
-                                <img src="img/tailwind.png" alt="Tailwind">
-                                <div class="skills-name">Tailwind</div>
-                            </div>
+                            
                         </div>
 
                         <div class="skills-row">
@@ -105,8 +106,12 @@
                                 <div class="skills-name">React.js</div>
                             </div>
                             <div class="skills-item">
-                                <img src="img/git.png" alt="Git">
-                                <div class="skills-name">Git</div>
+                                <img src="img/express.png" alt="express">
+                                <div class="skills-name">Express.js</div>
+                            </div>
+                            <div class="skills-item">
+                                <img src="img/tailwind.png" alt="Tailwind">
+                                <div class="skills-name">Tailwind</div>
                             </div>
                             <div class="skills-item">
                                 <img src="img/api.png" alt="API">
@@ -177,7 +182,7 @@
                     <div class="project-description">
                         <h3><strong>Tech Portfolio</strong></h3>
                         <p></p>
-                        <p><strong>Tech Stack:</strong> Node.js, HTML, CSS, JavaScript, reacts.js, Tailwind</p>
+                        <p><strong>Tech Stack:</strong> Node.js, HTML, CSS, JavaScript, reacts.js, Express.js, Tailwind</p>
                         <div class="links">
                             <a href="#" class="link">Live APP</a>
                             <a href="https://github.com/IbzyX/Portfolio-App" class="link">LEARN MORE</a>
@@ -211,6 +216,19 @@
                 <p id="formStatus"></p>
             </form>
         </section>
+
+        <div class="footer">
+            <a href="#home" class="back-to-top">&gt;&gt;</a>
+            <div class="footer-link">
+                <a href="https://github.com/IbzyX">
+                    <img src="img/github.png">
+                </a>
+                <a herf="">
+                    <img src="img/cv.png">
+                </a>
+            </div>
+            <p>IBRAHIM RAHMAN ©2025</p>
+        </div>
 
 
         <script src="scripts.js"></script>
