--- a/static/index.html
+++ b/static/index.html
@@ -60,8 +60,8 @@
                         </div>
                         <p class="about-me">
                             I'm a self-taught software developer with a foundation in programming from school and University. 
-                            Over time, I discovered my passion for building full-stack application from the ground up and continuously improve my skills along the way. 
-                            What drives me is solving real problems through technology and identifying challenges, experimenting with solutions and turning ideas into working products. 
+                            Over time, i discovered my passion for building full-stack application from the ground up and continuously improve my skills along the way. 
+                            what drives me is solving real problems through technology and identifying challenges, experimenting with solutions and turning ideas into working products. 
                         </p>
                     </div>
                     <div class="skills">
@@ -136,10 +136,7 @@
                             <img src="img/projectmakerai2.png" alt="Slide 1">
                         </div>
                         <div class="slide ProjectMakerAI">
-                            <img src="img/projectMakerInput.png" alt="Slide 2">
-                        </div>
-                        <div class="slide ProjectMakerAI">
-                            <img src="img/projectMakerGenerator.png" alt="Slide 3">
+                            <img src="img/ProjectMakerAI.png" alt="Slide 2">
                         </div>
                     </div>
                     <div class="project-description">
@@ -147,7 +144,7 @@
                         <p>Instantly build a project scaffold utilizing AI.</p>
                         <p><strong>Tech Stack:</strong> Python, HTML, JavaScript, CSS, OpenAI API</p>
                         <div class="links">
-                            <a href="https://projectmakerai.onrender.com/" class="link">LIVE APP</a>
+                            <a href="#" class="link">LIVE APP</a>
                             <a href="https://github.com/IbzyX/ProjectMakerAI" class="link">LEARN MORE</a>
                         </div>
                     </div>
