--- a/static/index.html
+++ b/static/index.html
@@ -136,7 +136,10 @@
                             <img src="img/projectmakerai2.png" alt="Slide 1">
                         </div>
                         <div class="slide ProjectMakerAI">
-                            <img src="img/ProjectMakerAI.png" alt="Slide 2">
+                            <img src="img/projectMakerInput.png" alt="Slide 2">
+                        </div>
+                        <div class="slide ProjectMakerAI">
+                            <img src="img/projectMakerGenerator.png" alt="Slide 3">
                         </div>
                     </div>
                     <div class="project-description">
@@ -156,10 +159,7 @@
                             <img src="img/financeTrackerProject.png" alt="Slide 1">
                         </div>
                         <div class="slide FinanceTracker">
-                            <img src="img/projectMakerInput.png" alt="Slide 2">
-                        </div>
-                        <div class="slide ProjectMakerAI">
-                            <img src="img/projectMakerGenerator.png" alt="Slide 3">
+                            <img src="img/financeTrackerP2.png" alt="Slide 2">
                         </div>
                     </div>
                     <div class="project-description">
@@ -185,7 +185,7 @@
                     <div class="project-description">
                         <h3><strong>Tech Portfolio</strong></h3>
                         <p></p>
-                        <p><strong>Tech Stack:</strong> Node.js, HTML, CSS, JavaScript, reacts.js, Express.js, Tailwind</p>
+                        <p><strong>Tech Stack:</strong> Node.js, HTML, CSS, JavaScript, Express.js, Tailwind</p>
                         <div class="links">
                             <a href="#" class="link">Live APP</a>
                             <a href="https://github.com/IbzyX/Portfolio-App" class="link">LEARN MORE</a>
