project section (learn-more) modal description

--- a/static/index.html
+++ b/static/index.html
@@ -187,7 +187,7 @@
                         <p></p>
                         <p><strong>Tech Stack:</strong>  Node.js, Express.js, JavaScript, HTML, CSS, Tailwind, Nodemailer</p>
                         <div class="links">
-                            <a href="#" class="link">Live APP</a>
+                            <a href="https://ibrahim-rahman-portfolio.vercel.app/" class="link">Live APP</a>
                             <button class="link learn-more" data-project="portfolio">LEARN MORE</button>
                         </div>
                     </div>
